--- a/whm/docroot/templates/acronisbackup.tmpl
+++ b/whm/docroot/templates/acronisbackup.tmpl
@@ -3,7 +3,7 @@
     USE NVData;
     USE JSON;
     WRAPPER 'master_templates/master.tmpl'
-        header = locale.maketext('Acronis Backup Manager')
+        header = locale.maketext('Acronis Backup')
         breadcrumburl = '/cgi/plugins/acronis.pl'
         theme = 'bootstrap'
         scripts = [
@@ -13,7 +13,7 @@
 -%]
 
 Acronis Backup plugin allows end users to recover own websites and databases in case if this server is backed up with Acronis Backup.
- <section class="container">
+ <section class="container" onload="myFunction()">
  <div class="form-group">
 <div id="validate" style="display:none;">
           <ul class="validation-container">
@@ -45,21 +45,35 @@ Acronis Backup plugin allows end users to recover own websites and databases in 
 
 [% IF ! options.pass %]
         <p><label id="passcolor" for="password">Password*</label> <input id="UserPass" type="password" class="form-control" name="UserPass" ></p>
+                [% ELSE %]
+                <p><label id="passcolor" for="password">Password</label> <input id="UserPass" type="password" placeholder="Adding Password will change your existing password" class="form-control" name="UserPass" ></p>
 [% END -%]
-<br></br>
-                <p class="button"><button type="button" class="btn btn-primary" onclick="myFunction(event, $(this), 'step1')">Next</button></p>
-      </div>
 
-          <br></br>
+[% IF ! options.pass && options.user && options.host %]
+           
+        [% ELSE %]
+           <p class="button"><button id="nextbutton" type="button" class="btn btn-primary" onclick="myFunction(event, $(this), 'step1')">Next</button></p>
+        [% END %]
+                
+       </div>
+
+
     </div>
-         <div class="form-group" id="Backup" style="display:none;">
+	[% IF ! options.pass && options.user && options.host %]
+            <div class="form-group" id="Backup">
+        [% ELSE %]
+            <div class="form-group" id="Backup" style="display:none;">
+        [% END %]
+        
         <h1>Configure Backup</h1>
 
-        <label for="BackUpPlan">Backup Plan </label> <select id="BackUpPlan" name="BackUpPlan" class="form-control">
+
+Specify a backup plan configured for cPanel backup. Provide encryption password in case if the encryption is enabled in the backup plan.<br></br>
+       <p> <label for="BackUpPlan">Backup Plan </label> <select id="BackUpPlan" name="BackUpPlan" class="form-control">
   <option value="Hourly">Hourly</option>
   <option value="Daily">Daily</option>
-  </select>
-  <br></br>
+  </select></p>
+
 <p><label for="ServerEncrypt">Encyption: </label>  <input id="ServerEncrypt" type="text" class="form-control" name="ServerEncrypt"><br>
         <p><button type="button" class="btn btn-primary" onclick="myFunction(event, $(this), 'step2')">Save</button></p>
 
@@ -71,6 +85,7 @@ Acronis Backup plugin allows end users to recover own websites and databases in 
                 <script>
                 function myFunction(e, button, step) {
                 var flag=1;
+				var curSelectBackup='[% options.plan %]';
 
                 $('#HostName').css({"border-color":'black'});
                 $('#UserName').css({"border-color":'black'});
@@ -81,14 +96,18 @@ $('#UserPass').css({"border-color":'black'});
                 if ($('#HostName').val() == null || $('#HostName').val() == "") {
                                         $('#HostName').css({"border-color":'red'});
                                         $('#validate').show();
-                                        $( "#Backup" ).hide();
+										if(step=="step1"){
+											$( "#Backup" ).hide();
+										}
                                         flag=-1;
                                 }
 
                 if ($('#UserName').val() == null || $('#UserName').val() == "") {
                                         $('#UserName').css({"border-color":'red'});
                                         $('#validate').show();
-                                        $( "#Backup" ).hide();
+                                        if(step=="step1"){
+											$( "#Backup" ).hide();
+										}
                                         flag=-1;
                 }
 
@@ -96,7 +115,9 @@ $('#UserPass').css({"border-color":'black'});
                  if ($('#UserPass').val() == null || $('#UserPass').val() == "") {
                                         $('#UserPass').css({"border-color":'red'});
                                         $('#validate').show();
-                                        $( "#Backup" ).hide();
+                                        if(step=="step1"){
+											$( "#Backup" ).hide();
+										}
                                         flag=-1;
                 }
 [% END -%]
@@ -110,20 +131,23 @@ $('#UserPass').css({"border-color":'black'});
                                           data: { UserName: $('#UserName').val().trim(), HostName: $('#HostName').val().trim(), UserPass: $('#UserPass').val().trim(), ServerEncrypt: $('#ServerEncrypt').val().trim(), BackUpPlan: $('#BackUpPlan').val().trim(), "step":step },
                                           dataType: 'json',
                                         }).done(function(data){
-											if(data.status!==200){
-												alert(data.msg);
-												$( "#Backup" ).hide();
-												return;
-											}
-											if(step=="step1"){
-												$('#BackUpPlan > option').remove();
-												
-												for(var i=0;i<data.data.length; i++){
-													$('#BackUpPlan').append($('<option value="'+ data.data[i].id +'">'+ data.data[i].name +'</option>'));
-												}
-												
-												$( "#Backup" ).show();
-											}
+                                                                                        if(data.status!==200){
+                                                                                                alert(data.msg);
+
+
+
+                                                                                                $( "#Backup" ).hide();
+                                                                                                return;
+                                                                                        }
+                                                                                        if(step=="step1"){
+                                                                                                $('#BackUpPlan > option').remove();
+
+                                                                                                for(var i=0;i<data.data.length; i++){
+                                                                                                        $('#BackUpPlan').append($('<option value="'+ data.data[i].id +'">'+ data.data[i].name +'</option>'));
+                                                                                                }
+                                                                                                $( "#nextbutton" ).hide();
+                                                                                                $( "#Backup" ).show();
+                                                                                        }
 
                                         }).fail(function(jqXHR, textStatus, errorThrown) {
                                                 alert( textStatus);
@@ -136,5 +160,3 @@ $('#UserPass').css({"border-color":'black'});
                 </script>
 
 [% END -%]
-
-
